--- a/detect_mask_video.ipynb
+++ b/detect_mask_video.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "e06a9fa7-2a03-4da1-9f56-c66d6bd70725",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "09c73b0a-d59e-4ea6-b1da-d6cde9450025",
    "metadata": {},
    "outputs": [],
@@ -80,19 +80,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "1b5d8042-e2fd-4915-bd3d-a3b1ef47f34a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-08-29 03:30:31.351297: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# load our serialized face detector model from disk\n",
     "prototxt_path = r\"face_detector/deploy.prototxt\"\n",
@@ -105,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "12f686c2-a49f-42d5-9c53-9712c36583fb",
    "metadata": {},
    "outputs": [
@@ -132,11 +123,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "f2e2e167-1cfe-43b4-aebd-7f1952d192e8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'shape'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_1638/4126867995.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;31m# grab the frame from threaded video stream and resize it to have max width of 400 pixels\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mframe\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0mframe\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mimutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwidth\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m400\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;31m# detect faces in the frame and determ if they are wearing mask, not wearing, or worn incorrectly\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/lib/python3.9/site-packages/imutils/convenience.py\u001b[0m in \u001b[0;36mresize\u001b[0;34m(image, width, height, inter)\u001b[0m\n\u001b[1;32m     67\u001b[0m     \u001b[0;31m# grab the image size\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     68\u001b[0m     \u001b[0mdim\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 69\u001b[0;31m     \u001b[0;34m(\u001b[0m\u001b[0mh\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mw\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mimage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     70\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     71\u001b[0m     \u001b[0;31m# if both the width and height are None, then return the\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'shape'"
+     ]
+    }
+   ],
+   "source": [
+    "# loop over the frames from the video stream\n",
+    "while True:\n",
+    "    # grab the frame from threaded video stream and resize it to have max width of 400 pixels\n",
+    "    frame = vs.read()\n",
+    "    frame = imutils.resize(frame, width=400)\n",
+    "    \n",
+    "    # detect faces in the frame and determ if they are wearing mask, not wearing, or worn incorrectly\n",
+    "    (locs, preds) = detect_and_predict_mask(frame, faceNet, maskNet)\n",
+    "    \n",
+    "    # loop over detected fadce locations and their corresponding locations\n",
+    "    for (box, pred) in zip(locs, preds):\n",
+    "        # unpack the bounding box and predictions\n",
+    "        (startX, startY, endX, endY) = box\n",
+    "        (mask, withoutMask, maskWornIncorrect) = pred\n",
+    "        \n",
+    "        # determine the class label and color we'll use to draw the bounding box and text\n",
+    "        label = \"Mask\" if mask > withoutMask else \"No Mask\"\n",
+    "        color = (0, 255, 0) if label == \"Mask\" else (0, 0, 255)\n",
+    "        \n",
+    "        # incl probability in the label\n",
+    "        label = \"{}: {:.2f}%\".format(label, max(mask, withoutMask) * 100)\n",
+    "        \n",
+    "        # display the label and bounding box rectangle on the output frame\n",
+    "        cv2.putText(frame, label, (startX, startY), (endX, endY), color, 2)\n",
+    "    \n",
+    "    # show output frame\n",
+    "    cv2.imshow(\"Frame\", frame)\n",
+    "    key = cv2.waitKey(1) & 0xFF\n",
+    "    \n",
+    "    # if 'q' key is pressed, break from the loop\n",
+    "    if key == ord('q'):\n",
+    "        break\n",
+    "        \n",
+    "# do a bit of cleanup\n",
+    "cv2.destroyAllWindows()\n",
+    "vs.stop()"
+   ]
   },
   {
    "cell_type": "code",
