--- a/train_recog_first.ipynb
+++ b/train_recog_first.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 164,
    "id": "3a16e285-65ea-4ced-825c-f19a9e1511fb",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
     "from tensorflow.keras import layers\n",
     "from tensorflow.keras.layers.experimental import preprocessing\n",
     "from sklearn.preprocessing import LabelBinarizer, MultiLabelBinarizer, OneHotEncoder\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.metrics import classification_report\n",
     "\n",
     "from imutils import paths\n",
@@ -86,21 +86,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 161,
    "id": "45d308cf-a6a5-4112-a077-b287aaccf238",
    "metadata": {},
    "outputs": [],
    "source": [
     "# init the initial learning rate, number of epochs to train for, and batch size\n",
     "init_lr = 1e-4\n",
-    "epochs = 20\n",
+    "epochs = 40\n",
     "bs = 32\n",
-    "image_size = (224,224)"
+    "image_size = (256,256)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 130,
    "id": "2d6271c8-4973-4efc-8d80-6eba1c56d77d",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 131,
    "id": "3d4c9565-b003-49ac-99d8-05c55c70f891",
    "metadata": {},
    "outputs": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 132,
    "id": "690707c7-1c0f-43b0-84fb-ec6441521f58",
    "metadata": {},
    "outputs": [],
@@ -443,12 +443,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 162,
    "id": "8d17b7e5-b210-43d0-98d8-e7117f4e1be6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def build_model(num_classes, img_size=224):\n",
+    "def build_model(num_classes, img_size=256, dropout_rate=0):\n",
     "    # load MobileNetV2 network, ensuring the head FC (Fully Connected) layer sets are left off\n",
     "    inputs = Input(shape=(img_size,img_size,3))    \n",
     "    baseModel = MobileNetV2(input_shape=(img_size,img_size,3),weights=\"imagenet\", include_top=False, input_tensor=inputs)\n",
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 163,
    "id": "25de8a66-e84d-48f6-974e-27ebb1c806d5",
    "metadata": {},
    "outputs": [],
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 158,
    "id": "ba036405-d3c7-441e-8461-c424cbaa4283",
    "metadata": {},
    "outputs": [
@@ -508,8 +508,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 7185 images belonging to 3 classes.\n",
-      "Found 897 images belonging to 3 classes.\n"
+      "Found 7188 images belonging to 3 classes.\n",
+      "Found 1794 images belonging to 3 classes.\n"
      ]
     }
    ],
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 159,
    "id": "f11dd128-7a7e-4d53-9915-476444ca8c89",
    "metadata": {},
    "outputs": [],
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 160,
    "id": "c797a270-7b2f-44d7-bd2f-c5f18da5df65",
    "metadata": {},
    "outputs": [
@@ -541,13 +541,62 @@
      "text": [
       "[INFO] compiling model...\n",
       "[INFO] training head...\n",
-      "Epoch 1/20\n",
-      "7/7 [==============================] - 7s 779ms/step - loss: 1.4703 - accuracy: 0.4462 - val_loss: 1.0916 - val_accuracy: 0.4375\n",
-      "Epoch 2/20\n",
-      "7/7 [==============================] - 5s 715ms/step - loss: 1.4582 - accuracy: 0.3544 - val_loss: 0.9736 - val_accuracy: 0.5625\n",
-      "Epoch 3/20\n",
-      "7/7 [==============================] - 5s 740ms/step - loss: 1.3863 - accuracy: 0.3243 - val_loss: 0.9257 - val_accuracy: 0.6250\n",
-      "Epoch 4/20\n"
+      "Epoch 1/100\n",
+      "7/7 [==============================] - 7s 799ms/step - loss: 2.4702 - accuracy: 0.3931 - val_loss: 1.2977 - val_accuracy: 0.4062\n",
+      "Epoch 2/100\n",
+      "7/7 [==============================] - 5s 719ms/step - loss: 1.4483 - accuracy: 0.4438 - val_loss: 1.0800 - val_accuracy: 0.5000\n",
+      "Epoch 3/100\n",
+      "7/7 [==============================] - 5s 725ms/step - loss: 1.6881 - accuracy: 0.3328 - val_loss: 1.0159 - val_accuracy: 0.4688\n",
+      "Epoch 4/100\n",
+      "7/7 [==============================] - 5s 722ms/step - loss: 1.6380 - accuracy: 0.3024 - val_loss: 0.9974 - val_accuracy: 0.4375\n",
+      "Epoch 5/100\n",
+      "7/7 [==============================] - 5s 726ms/step - loss: 1.3367 - accuracy: 0.3941 - val_loss: 0.9987 - val_accuracy: 0.4375\n",
+      "Epoch 6/100\n",
+      "7/7 [==============================] - 5s 739ms/step - loss: 1.2271 - accuracy: 0.4099 - val_loss: 0.9695 - val_accuracy: 0.4062\n",
+      "Epoch 7/100\n",
+      "7/7 [==============================] - 5s 737ms/step - loss: 1.1456 - accuracy: 0.4470 - val_loss: 0.9388 - val_accuracy: 0.5625\n",
+      "Epoch 8/100\n",
+      "7/7 [==============================] - 5s 721ms/step - loss: 1.1620 - accuracy: 0.4223 - val_loss: 0.9197 - val_accuracy: 0.5938\n",
+      "Epoch 9/100\n",
+      "7/7 [==============================] - 5s 725ms/step - loss: 1.0378 - accuracy: 0.4787 - val_loss: 0.9089 - val_accuracy: 0.5938\n",
+      "Epoch 10/100\n",
+      "7/7 [==============================] - 5s 727ms/step - loss: 1.1248 - accuracy: 0.4337 - val_loss: 0.9048 - val_accuracy: 0.5938\n",
+      "Epoch 11/100\n",
+      "7/7 [==============================] - 5s 731ms/step - loss: 1.0952 - accuracy: 0.4183 - val_loss: 0.9032 - val_accuracy: 0.6250\n",
+      "Epoch 12/100\n",
+      "7/7 [==============================] - 5s 727ms/step - loss: 1.0420 - accuracy: 0.5044 - val_loss: 0.8968 - val_accuracy: 0.6250\n",
+      "Epoch 13/100\n",
+      "7/7 [==============================] - 5s 731ms/step - loss: 0.9468 - accuracy: 0.5217 - val_loss: 0.8785 - val_accuracy: 0.6250\n",
+      "Epoch 14/100\n",
+      "7/7 [==============================] - 5s 764ms/step - loss: 1.0073 - accuracy: 0.4920 - val_loss: 0.8691 - val_accuracy: 0.6250\n",
+      "Epoch 15/100\n",
+      "7/7 [==============================] - 5s 737ms/step - loss: 1.0098 - accuracy: 0.4209 - val_loss: 0.8703 - val_accuracy: 0.6250\n",
+      "Epoch 16/100\n",
+      "7/7 [==============================] - 5s 729ms/step - loss: 1.0691 - accuracy: 0.4363 - val_loss: 0.8642 - val_accuracy: 0.6250\n",
+      "Epoch 17/100\n",
+      "7/7 [==============================] - 5s 724ms/step - loss: 0.9388 - accuracy: 0.5787 - val_loss: 0.8609 - val_accuracy: 0.6250\n",
+      "Epoch 18/100\n",
+      "7/7 [==============================] - 5s 741ms/step - loss: 0.9214 - accuracy: 0.5365 - val_loss: 0.8455 - val_accuracy: 0.6562\n",
+      "Epoch 19/100\n",
+      "7/7 [==============================] - 5s 738ms/step - loss: 1.0088 - accuracy: 0.4680 - val_loss: 0.8256 - val_accuracy: 0.6562\n",
+      "Epoch 20/100\n",
+      "7/7 [==============================] - 5s 736ms/step - loss: 0.9277 - accuracy: 0.5874 - val_loss: 0.8121 - val_accuracy: 0.6250\n",
+      "Epoch 21/100\n",
+      "7/7 [==============================] - 5s 737ms/step - loss: 0.9080 - accuracy: 0.5136 - val_loss: 0.8064 - val_accuracy: 0.6562\n",
+      "Epoch 22/100\n",
+      "7/7 [==============================] - 5s 730ms/step - loss: 0.9510 - accuracy: 0.5613 - val_loss: 0.8072 - val_accuracy: 0.6562\n",
+      "Epoch 23/100\n",
+      "7/7 [==============================] - 5s 726ms/step - loss: 0.8969 - accuracy: 0.5993 - val_loss: 0.8074 - val_accuracy: 0.6562\n",
+      "Epoch 24/100\n",
+      "7/7 [==============================] - 5s 729ms/step - loss: 0.8915 - accuracy: 0.5662 - val_loss: 0.8046 - val_accuracy: 0.6562\n",
+      "Epoch 25/100\n",
+      "7/7 [==============================] - 5s 733ms/step - loss: 0.9548 - accuracy: 0.5223 - val_loss: 0.7974 - val_accuracy: 0.6562\n",
+      "Epoch 26/100\n",
+      "7/7 [==============================] - 5s 736ms/step - loss: 0.9013 - accuracy: 0.6139 - val_loss: 0.7886 - val_accuracy: 0.6562\n",
+      "Epoch 27/100\n",
+      "7/7 [==============================] - 5s 732ms/step - loss: 0.9207 - accuracy: 0.5620 - val_loss: 0.7729 - val_accuracy: 0.6562\n",
+      "Epoch 28/100\n",
+      "4/7 [================>.............] - ETA: 1s - loss: 0.8714 - accuracy: 0.5710"
      ]
     },
     {
@@ -557,7 +606,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_64/3183197438.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# train head of the network\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"[INFO] training head...\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m H = model.fit(\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0mtrain\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0msteps_per_epoch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m//\u001b[0m \u001b[0mbs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_64/2231015268.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# train head of the network\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"[INFO] training head...\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m H = model.fit(\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0mtrain\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0msteps_per_epoch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m//\u001b[0m \u001b[0mbs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/opt/conda/lib/python3.9/site-packages/tensorflow/python/keras/engine/training.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, steps_per_epoch, validation_steps, validation_batch_size, validation_freq, max_queue_size, workers, use_multiprocessing)\u001b[0m\n\u001b[1;32m   1098\u001b[0m                 _r=1):\n\u001b[1;32m   1099\u001b[0m               \u001b[0mcallbacks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mon_train_batch_begin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1100\u001b[0;31m               \u001b[0mtmp_logs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miterator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1101\u001b[0m               \u001b[0;32mif\u001b[0m \u001b[0mdata_handler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshould_sync\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1102\u001b[0m                 \u001b[0mcontext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masync_wait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/opt/conda/lib/python3.9/site-packages/tensorflow/python/eager/def_function.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args, **kwds)\u001b[0m\n\u001b[1;32m    826\u001b[0m     \u001b[0mtracing_count\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexperimental_get_tracing_count\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    827\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mtrace\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTrace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_name\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mtm\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 828\u001b[0;31m       \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    829\u001b[0m       \u001b[0mcompiler\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"xla\"\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_experimental_compile\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;34m\"nonXla\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    830\u001b[0m       \u001b[0mnew_tracing_count\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexperimental_get_tracing_count\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/opt/conda/lib/python3.9/site-packages/tensorflow/python/eager/def_function.py\u001b[0m in \u001b[0;36m_call\u001b[0;34m(self, *args, **kwds)\u001b[0m\n\u001b[1;32m    853\u001b[0m       \u001b[0;31m# In this case we have created variables on the first call, so we run the\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    854\u001b[0m       \u001b[0;31m# defunned version which is guaranteed to never create variables.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 855\u001b[0;31m       \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_stateless_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# pylint: disable=not-callable\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    856\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_stateful_fn\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    857\u001b[0m       \u001b[0;31m# Release the lock early so that multiple threads can perform the call\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -584,7 +633,7 @@
     "        epochs=epochs,\n",
     "        callbacks=tf.keras.callbacks.EarlyStopping(monitor='val_loss',\n",
     "                                                  verbose=1,\n",
-    "                                                  patience=4,\n",
+    "                                                  patience=6,\n",
     "                                                  restore_best_weights=True)\n",
     ")"
    ]
